# tinyIMU_relay

./: CMakeLists.txt  Doxyfile  README.md  package.xml
include/tinyIMURelay/: tinyIMURelay.h
launch/: basic.launch
src/: tinyIMURelay.cpp  tinyIMURelay_node.cpp
