<?xml version="1.0"?>
<package>
  <name>tinyIMU_relay</name>
  <version>0.0.0</version>
  <description>Relay for messages from arduino tinyIMU to ROS IMU message</description>

  <maintainer email="james.s.jackson@byu.edu">James Jackson</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tiny_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tiny_msgs</run_depend>

  <export>
  </export>

</package>
